force-app/main/default/objects/Producto_Reclamado__c/Producto_Reclamado__c.object-meta.xml
<CustomObject>
    <label>Producto Reportado</label>
    <nameField>
        <label># Partida</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productos Reportados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>