force-app/main/default/objects/Producto_Reclamado__c/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Productos_Reclamados</relationshipName>
    <type>Lookup</type>
</CustomField>