force-app/main/default/objects/Producto_Reclamado__c/fields/Factura__c.field-meta.xml
<CustomField>
    <fullName>Factura__c</fullName>
    <label>Factura</label>
    <length>20</length>
    <type>Text</type>
</CustomField>