force-app/main/default/objects/Producto_Reclamado__c/fields/Fecha_factura__c.field-meta.xml
<CustomField>
    <fullName>Fecha_factura__c</fullName>
    <label>Fecha factura</label>
    <type>Date</type>
</CustomField>