force-app/main/default/objects/Producto_Reclamado__c/fields/Linea_de_Producto__c.field-meta.xml
<CustomField>
    <fullName>Linea_de_Producto__c</fullName>
    <formula>TEXT(Producto_relacionado__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linea de Producto</label>
    <type>Text</type>
</CustomField>