force-app/main/default/objects/Producto_Reclamado__c/fields/Lote_Facturado__c.field-meta.xml
<CustomField>
    <fullName>Lote_Facturado__c</fullName>
    <label>Lote Facturado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>