force-app/main/default/objects/Producto_Reclamado__c/fields/Monto_del_reclamo__c.field-meta.xml
<CustomField>
    <fullName>Monto_del_reclamo__c</fullName>
    <label>Monto del reclamo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>