force-app/main/default/objects/Producto_Reclamado__c/fields/Producto_relacionado__c.field-meta.xml
<CustomField>
    <fullName>Producto_relacionado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Productos_Reclamados</relationshipName>
    <type>Lookup</type>
</CustomField>