force-app/main/default/objects/Producto_Reclamado__c/fields/rea_Afectada_M2_si_aplica__c.field-meta.xml
<CustomField>
    <fullName>rea_Afectada_M2_si_aplica__c</fullName>
    <label>Área Afectada (M2) si aplica</label>
    <length>20</length>
    <type>Text</type>
</CustomField>