force-app/main/default/objects/Producto_Reclamado__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <formula>Producto_relacionado__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKU</label>
    <type>Text</type>
</CustomField>